--- a/build.yaml
+++ b/build.yaml
@@ -7,3 +7,13 @@ targets:
           output_format: single_file
           flutter_integration: true
           translate_var: i18n
+      json_serializable:
+        options:
+          checked: true
+          create_factory: true
+          create_to_json: true
+          disallow_unrecognized_keys: true
+          explicit_to_json: false
+          field_rename: snake
+          generic_argument_factories: false
+          ignore_unannotated: false
