--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 	<dict>
+		<key>CADisableMinimumFrameDurationOnPhone</key>
+		<true />
 		<key>CFBundleDevelopmentRegion</key>
 		<string>$(DEVELOPMENT_LANGUAGE)</string>
 		<key>CFBundleDisplayName</key>
@@ -12,6 +14,11 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>CFBundleLocalizations</key>
+		<array>
+			<string>ja</string>
+			<string>en</string>
+		</array>
 		<key>CFBundleName</key>
 		<string>nost</string>
 		<key>CFBundlePackageType</key>
@@ -20,9 +27,25 @@
 		<string>$(FLUTTER_BUILD_NAME)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
+		<key>CFBundleURLTypes</key>
+		<array>
+			<dict>
+				<key>
+					CFBundleTypeRole</key>
+				<string>Editor</string>
+				<key>
+					CFBundleURLSchemes</key>
+				<array>
+					<string>
+						685439481632-g6g21klnah879srvftca7hs2npn50tev.apps.googleusercontent.com</string>
+				</array>
+			</dict>
+		</array>
 		<key>CFBundleVersion</key>
 		<string>$(FLUTTER_BUILD_NUMBER)</string>
 		<key>LSRequiresIPhoneOS</key>
+		<true />
+		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true />
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
@@ -46,14 +69,5 @@
 			<string>
 				UIInterfaceOrientationLandscapeRight</string>
 		</array>
-		<key>CFBundleLocalizations</key>
-		<array>
-			<string>ja</string>
-			<string>en</string>
-		</array>
-		<key>CADisableMinimumFrameDurationOnPhone</key>
-		<true />
-		<key>UIApplicationSupportsIndirectInputEvents</key>
-		<true />
 	</dict>
 </plist>
