--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   device_preview: ^1.1.0
   slang: ^3.25.0
   slang_flutter: ^3.25.0
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
