--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   slang: ^3.25.0
   slang_flutter: ^3.25.0
   google_sign_in: ^6.1.6
+  stacked_listview: ^1.0.4
+  badges: ^3.1.2
+  flutter_advanced_drawer: ^1.3.5
+  font_awesome_flutter: ^10.6.0
+  animated_toggle_switch: ^0.8.0
+  table_calendar: ^3.0.9
+  easy_stepper: ^0.8.2
 
 dev_dependencies:
   flutter_test:
