--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   animated_toggle_switch: ^0.8.0
   table_calendar: ^3.0.9
   easy_stepper: ^0.8.2
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
