🚀 feat: 一旦コミット

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   table_calendar: ^3.0.9
   easy_stepper: ^0.8.2
   settings_ui: ^2.0.2
+  hashids2: ^2.0.0
 
 dev_dependencies:
   flutter_test:
