--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dev_dependencies:
   go_router_builder: ^2.3.4
   slang_build_runner: ^3.25.0
   flutter_gen_runner: ^5.3.2
+  dot_navigation_bar: ^1.0.2
 
 flutter_gen:
   output: lib/core/gen/
