--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,6 +5,8 @@ analyzer:
         - pubspec.yaml
         - lib/env.dart
         - lib/env.g.dart
+        - '**/*.g.dart'
+        - '**/*.freezed.dart'
 
 linter:
   rules:
