--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations: # add this
+  flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.2
   supabase_flutter: ^2.0.2
@@ -36,7 +36,6 @@ dependencies:
   retrofit: ^4.0.3
   dio: ^5.3.3
   uuid: ^4.2.1
-  device_preview: ^1.1.0
   slang: ^3.25.0
   slang_flutter: ^3.25.0
   google_sign_in: ^6.1.6
