--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   easy_stepper: ^0.8.2
   settings_ui: ^2.0.2
   hashids2: ^2.0.0
+  lite_rolling_switch: ^1.0.1
 
 dev_dependencies:
   flutter_test:
